istio/steps/rollout-test-steps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rollouttest-steps
  labels:
    istio-injection: enabled

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-nodeapp-steps
  namespace: rollouttest-steps
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: canary-svc
      stableService: stable-svc
      trafficRouting:
        istio:
          virtualService:
            name: rollout-vsvc-nodeapp-steps
            routes:
              - primary
      steps:
        - setWeight: 20
        - pause: { }   # "kubectl-argo-rollouts -n rollouttest-steps promote rollout-nodeapp-steps" to promote to the next step
        - setWeight: 40
        - pause: { duration: 60 }
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nodeapp-steps
  template:
    metadata:
      labels:
        app: nodeapp-steps
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/serviceversion: "v01"
    spec:
      containers:
        - image: albertogarces/nodeapp-01:v01
          name: nodeapp-01
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /liveOK
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyOK
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-rollout-gateway
  namespace: rollouttest-steps
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc-nodeapp-steps
  namespace: rollouttest-steps
spec:
  gateways:
    - istio-rollout-gateway
  hosts:
    - "*"
  http:
    - name: primary
      route:
        - destination:
            host: stable-svc
          weight: 100
        - destination:
            host: canary-svc
          weight: 0

---
apiVersion: v1
kind: Service
metadata:
  name: stable-svc
  namespace: rollouttest-steps
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: nodeapp-steps

---
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  namespace: rollouttest-steps
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: nodeapp-steps
